test/grammar/types/args/call_expr_err_too_few_args_1/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:1:5
  |
1 | a = "".replace("old")
  |     ^ expected 2 positional arguments, found 1
  |